--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 		<title>DPMI libcap_utils</title>
 		<link href="site.min.css" rel="stylesheet">
 	</head>
-	<body>
+	<body ng-app="site">
+		<div class="container">
+			<h1>DPMI <tt>libcap_utils</tt> documentation</h1>
+			<div ng-view></div>
+		</div>
+		<script src="vendor.min.js"></script>
 		<script src="site.min.js"></script>
 	</body>
 </html>
